--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -6,4 +6,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python
-      - run: python ../../src/test-utils.py
+      - run: python src/test-utils.py
